name:                mish
version:             0.0.1.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Halvor G. Bjørnstad
maintainer:          halvorgb@gmail.com
-- copyright:
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable MissionGenerator
  main-is: Test.hs
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
                     , containers >= 0.5.5.1
                     , random >= 1.1
  ghc-options:         -Wall -O2 -fwarn-unused-imports -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010
