name:                mish
version:             0.0.1.0
synopsis:            A maze/dungeon generator, uses hexagonal tiles and creates a hexagonal dungeon.
description:         To use: call Mish.MissionGenerator.generateMission with a Mish.Config.
license:             MIT
license-file:        LICENSE
author:              Halvor G. Bjørnstad
maintainer:          halvorgb@gmail.com
-- copyright:
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:   Mish.Config
                   , Mish.MissionGenerator
                   , Mish.HexagonalGrid
  other-modules:     Mish.ConnectorGenerator
                   , Mish.MazeGenerator
                   , Mish.RoomGenerator
                   , Mish.Util
  -- other-modules:
  -- other-extensions:
  build-depends:     base >=4.7 && <4.8
                   , containers >= 0.5.5.1
                   , random >= 1.1
  hs-source-dirs:    src
  default-language:  Haskell2010

executable mish-generator
  hs-source-dirs:    mish-generator
  main-is:           Main.hs
  build-depends:     base >=4.7 && <4.8
                   , containers >= 0.5.5.1
                   , random >= 1.1
                   , mish
  ghc-options:       -Wall -O2 -fwarn-unused-imports -threaded
  default-language:  Haskell2010